--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Movie List</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -34,6 +35,15 @@
 
     <!-- data-panel -->
     <div class="container mt-5">
+        <!-- Search Bar -->
+        <div class="row" id="search-bar">
+            <form class="form-inline">
+                <label class="sr-only" for="search">Name</label>
+                <input type="text" class="form-control mb-2 mr-sm-2" id="search" placeholder="Search Name ...">
+                <button type="submit" class="btn btn-primary mb-2" id="submit-search">Search</button>
+            </form>
+        </div>
+
         <div class="row" id="data-panel">
             <!-- print movie list here -->
         </div>
