--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Movie List</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -36,15 +38,20 @@
     <!-- data-panel -->
     <div class="container mt-5">
         <!-- Search Bar -->
-        <div class="row" id="search-bar">
-            <form class="form-inline">
+        <div class="row justify-content-between" id="search-bar">
+            <form class="form-inline d-inline">
                 <label class="sr-only" for="search">Name</label>
                 <input type="text" class="form-control mb-2 mr-sm-2" id="search" placeholder="Search Name ...">
                 <button type="submit" class="btn btn-primary mb-2" id="submit-search">Search</button>
             </form>
+
+            <div class="card-list">
+                <i class="fa fa-th fa-2x mx-2" id="card" aria-hidden="true"></i>
+                <i class="fas fa-bars fa-2x mx-2" id="list" aria-hidden="true"></i>
+            </div>
         </div>
 
-        <div class="row" id="data-panel">
+        <div class="row mt-3" id="data-panel">
             <!-- print movie list here -->
         </div>
     </div>
