make sure user can change the list/card mode in the same searching result, and add some hover effect

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </form>
 
             <div class="card-list">
-                <i class="fa fa-th fa-2x mx-2" id="card" aria-hidden="true"></i>
+                <i class="fa fa-th fa-2x mx-2 hover-color-change" id="card" aria-hidden="true"></i>
                 <i class="fas fa-bars fa-2x mx-2" id="list" aria-hidden="true"></i>
             </div>
         </div>
@@ -85,7 +85,7 @@
     </div>
 
     <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
+        <ul class="pagination justify-content-center mt-3">
             <li class="page-item">
                 <a class="page-link" href="#">1</a>
             </li>
